<resources>
    <string name="app_name">invoice_maker_app</string>
    <string name="invoice">Invoice</string>
    <string name="estimate">Estimate</string>
    <string name="client">Client</string>
    <string name="items">Items</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_unpaid">Total Unpaid</string>
    <string name="total_overdue">Total Overdue</string>
    <string name="_120">$120</string>
    <string name="inv001">INV001</string>
    <string name="_25_08_2021">25/08/2021</string>
    <string name="fully_paid">Fully Paid</string>
    <string name="_25_20">$ 25,20</string>
    <string name="paid">PAID</string>
    <string name="filter_by">Filter by</string>
    <string name="client_name">Client name</string>
    <string name="creation_date">Creation Date</string>
    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>
    <string name="set_date">Set Date</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="mask_as">Mask as</string>
    <string name="paids">Paid</string>
    <string name="unpaid">Unpaid</string>
    <string name="change">Change</string>
    <string name="new_invoice">New Invoice</string>
    <string name="create_on">Create on:</string>
    <string name="due_on">Due on:</string>
    <string name="templates">Templates</string>
    <string name="add_signature">Add Signature</string>
    <string name="from">From</string>
    <string name="bill_to">Bill to</string>
    <string name="discount">Discount</string>
    <string name="tax">Tax</string>
    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="total">Total</string>
    <string name="shipping">Shipping</string>
    <string name="currency">Currency</string>
    <string name="vnd_0">VND 0đ</string>
    <string name="custom_mode">Custom Mode</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & conditions]]></string>
    <string name="add_attachments">Add Attachments</string>
    <string name="add_business">Add Business</string>
    <string name="invoice_infor">Invoice infor</string>
    <string name="done">Done</string>
    <string name="invoice_number">Invoice Number</string>
    <string name="inv0001">INV0001</string>
    <string name="due_terms">Due Terms</string>
    <string name="due_date">Due Date</string>
    <string name="p_o">P.O.#</string>
    <string name="all_client">All Client</string>
    <string name="business_infor">Business infor</string>
    <string name="logo">Logo</string>
    <string name="business_name">Business Name</string>
    <string name="business">Business</string>
    <string name="email_address">Email Address</string>
    <string name="abc_gmail_com">abc@gmail.com</string>
    <string name="_0123456789">0123456789</string>
    <string name="phone_number">Phone Number</string>
    <string name="billing_address">Billing Address</string>
    <string name="_123_456">123.456</string>
    <string name="business_website">Business Website</string>
    <string name="www_abc_com">www.abc.com</string>
    <string name="select_a_logo">Select a Logo</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="new_client">New Client</string>
    <string name="jasmin">Jasmin</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="chicago">Chicago</string>
    <string name="client_detail_not_show_on_invoice">Client Detail (Not show on Invoice)</string>
    <string name="new_terms_amp_conditions"><![CDATA[New Terms & Conditions]]></string>
    <string name="terms_amp_conditions_list"><![CDATA[Terms & Conditions list]]></string>
    <string name="payment_method">Payment Method</string>
    <string name="new_payment_method">New Payment Method</string>
    <string name="payment_method_list">Payment Method list</string>
    <string name="pending">Pending</string>
    <string name="new_item">New Item</string>
    <string name="item_list">Item List</string>
    <string name="new_tax">New Tax</string>
    <string name="ok">OK</string>
    <string name="_0_00">0.00%</string>
    <string name="shipping_amount">Shipping Amount</string>
    <string name="new_attachment">New Attachment</string>
    <string name="attachment_list">Attachment List</string>
    <string name="s">$</string>
    <string name="_0_500">0/500</string>
    <string name="do_you_want_to_delete">Do you want to delete ?</string>
    <string name="delete">Delete</string>
    <string name="_0">0</string>
    <string name="tax_name">Tax Name</string>
    <string name="tax_rate">Tax Rate</string>
</resources>