<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/color_F7FBFF"
        app:cardCornerRadius="10dp"
        app:strokeColor="@color/color_E4EBF4"
        app:strokeWidth="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/delete"
                android:textColor="@color/color_383F5C"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/do_you_want_to_delete"
                android:textColor="@color/color_91B2DB" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnCancel"
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/color_F7FBFF"
                    app:cardCornerRadius="8dp"
                    app:strokeColor="@color/color_2DBDD8"
                    app:strokeWidth="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:paddingStart="18dp"
                        android:paddingTop="3dp"
                        android:paddingEnd="18dp"
                        android:paddingBottom="3dp"
                        android:text="@string/cancel"
                        android:textColor="@color/color_2DBDD8"
                        android:textSize="12sp" />


                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnOK"
                    android:layout_width="80dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="24dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cardBackgroundColor="@color/color_2DBDD8"
                    app:cardCornerRadius="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/poppins_medium"
                        android:gravity="center"
                        android:text="@string/ok"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</LinearLayout>